changes file types

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -2,7 +2,7 @@
 // include '../includes/db.php';
 
 // if (!isset($_SESSION['role']) || $_SESSION['role'] !== 'admin') {
-//     header('Location: login.php');
+//     header('Location: login.html');
 //     exit();
 // }
 
@@ -30,8 +30,8 @@
             <div class="top-bar">
                 <div class="logo-name">Movie Theater Admin</div>
                 <div class="pages-names">
-                    <a href="movies.php">Movies</a>
-                    <a href="contacts.php">Contacts</a>
+                    <a href="movies.html">Movies</a>
+                    <a href="contacts.html">Contacts</a>
                     <a href="logout.php">Logout</a>
                 </div>
             </div>
