--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -5,7 +5,7 @@
 // $connection = connectDatabase();
 
 // if (!isset($_SESSION['role']) || $_SESSION['role'] !== 'admin') {
-//     header('Location: login.php');
+//     header('Location: login.html');
 //     exit();
 // }
 
@@ -255,22 +255,22 @@
                         loopstudios
                     </div>
                     <div class="pages-names">
-                        <a href="home.php">
+                        <a href="home.html">
                             <span>
                                 Home
                             </span>
                         </a>
-                        <a href="movies.php">
+                        <a href="movies.html">
                             <span>
                                 Movies
                             </span>
                         </a>
-                        <a href="contacts.php">
+                        <a href="contacts.html">
                             <span>
                                 Contacts
                             </span>
                         </a>
-                        <a href="login.php">
+                        <a href="login.html">
                             <span>
                                 Sign in
                             </span>
