--- a/pages/home.html
+++ b/pages/home.html
@@ -6,7 +6,7 @@
 // include '../includes/booking_crud.php';
 
 // if (!isset($_SESSION['role']) || $_SESSION['role'] !== 'admin') {
-//     header("Location: ../pages/login.php");
+//     header("Location: ../pages/login.html");
 //     exit();
 // }
 
@@ -267,7 +267,7 @@
     // session_start();  // Start the session
 
     // if (!isset($_SESSION['user_id'])) {
-    //     header("Location: login.php");
+    //     header("Location: login.html");
     //     exit();
     // }
 
@@ -284,22 +284,22 @@
                         loopstudios
                     </div>
                     <div class="pages-names">
-                        <a href="home.php">
+                        <a href="home.html">
                             <span>
                                 Home
                             </span>
                         </a>
-                        <a href="movies.php">
+                        <a href="movies.html">
                             <span>
                                 Movies
                             </span>
                         </a>
-                        <a href="contacts.php">
+                        <a href="contacts.ml">
                             <span>
                                 Contacts
                             </span>
                         </a>
-                        <a href="login.php">
+                        <a href="login.html">
                             <span>
                                 Sign in
                             </span>
@@ -337,7 +337,7 @@
         </div>
     </div>
     <div class="bottom">
-        <a href="movies.php">
+        <a href="movies.html">
             <center><button class="button-20"> See All Movies</button></center>
         </a>
     </div>
