--- a/pages/login.html
+++ b/pages/login.html
@@ -6,26 +6,26 @@
 // if ($_SERVER["REQUEST_METHOD"] == "POST") {
 //     $username = $_POST['username'];
 //     $password = $_POST['password'];
-//     $confirm_password = $_POST['confirm_password'];
 
-//     // Check if passwords match
-//     if ($password !== $confirm_password) {
-//         $errorMessage = "Passwords do not match.";
-//     } else {
-//         // Hash the password before storing it
-//         $hashed_password = password_hash($password, PASSWORD_DEFAULT);
-        
-//         // WARNING: This is vulnerable to SQL injection! (Use prepared statements in production)
-//         $query = "INSERT INTO users (username, password) VALUES ('$username', '$hashed_password')";
-//         if ($connection->query($query) === TRUE) {
-//             // Registration successful, redirect to login page or dashboard
-//             header('Location: login.php');
+//     // WARNING: This is vulnerable to SQL injection!
+//     $query = "SELECT * FROM users WHERE username = '$username'";
+//     $result = $connection->query($query);
+
+//     if ($result->num_rows > 0) {
+//         $row = $result->fetch_assoc();
+//         if (password_verify($password, $row['password'])) {
+//             $_SESSION['username'] = $username;
+//             $_SESSION['role'] = $row['role'];
+//             header('Location: dashboard.php');
 //             exit();
 //         } else {
-//             $errorMessage = "Error: " . $connection->error;
+//             echo "Invalid password.";
 //         }
+//     } else {
+//         echo "No user found.";
 //     }
 // }
+
 ?>
 <!DOCTYPE html>
 <html lang="en">
@@ -34,9 +34,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Sign Up</title>
+    <title>Login</title>
     <style>
-       html,
+        /* Styles for form consistency */
+        html,
         body {
             margin: 0;
             padding: 0;
@@ -133,6 +134,36 @@
             border: 3px solid white;
             width: 30vw;
 
+        }
+
+        .visible {
+            position: absolute;
+            z-index: 2;
+            padding: 10px;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        .top-bar {
+            display: flex;
+            justify-content: space-between;
+            color: white;
+            padding-top: 4em;
+        }
+
+        .logo-name {
+            font-family: "Josefin Sans", sans-serif;
+            font-size: 2.5em;
+            padding-left: 10%;
+        }
+
+        .pages-names {
+            display: flex;
+            gap: 2em;
+            padding-right: 10%;
+            align-items: center;
         }
 
         .form-container {
@@ -265,7 +296,7 @@
 </head>
 
 <body>
-<div class="top">
+    <div class="top">
         <div class="wrapper">
             <img class="image-hero" src="../assets/image-hero.jpg"
                 alt="Description of the hero image">
@@ -277,22 +308,22 @@
                         loopstudios
                     </div>
                     <div class="pages-names">
-                        <a href="home.php">
+                        <a href="home.html">
                             <span>
                                 Home
                             </span>
                         </a>
-                        <a href="movies.php">
+                        <a href="movies.html">
                             <span>
                                 Movies
                             </span>
                         </a>
-                        <a href="contacts.php">
+                        <a href="contacts.ml">
                             <span>
                                 Contacts
                             </span>
                         </a>
-                        <a href="login.php">
+                        <a href="login.html">
                             <span>
                                 Sign in
                             </span>
@@ -312,22 +343,28 @@
             </div>
         </div>
 
-    <div class="form-container">
-        <form method="post" action="">
-            <h2 class="form-title">Sign Up</h2>
-            <?php if (isset($errorMessage)) : ?>
-                <div class="error-message"><?= $errorMessage ?></div>
-            <?php endif; ?>
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <input type="password" name="confirm_password" placeholder="Confirm Password" required>
-            <button type="submit" class="button-20">Sign Up</button>
-            <p>Already have an account? <a href="login.php">Log in</a></p>
-        </form>
-    </div>
-    <footer>
-        <p>© 2024 Loopstudios All rights reserved.</p>
-    </footer>
+
+        <div class="form-container">
+            <form action="login_handler.php" method="POST">
+                <div class="form-title"><b>Login</b></div>
+                <input type="text" name="username" placeholder="Username" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <button class="button-20" type="submit">Login</button>
+                <!-- Error message section -->
+                <?php if (isset($errorMessage)): ?>
+                    <div class="error-message">
+                        <?php echo $errorMessage; ?>
+                    </div>
+                <?php endif; ?>
+
+                <!-- Link to sign up page if user doesn't have an account -->
+                <p>Don't have an account? <a href="signup.php">Sign up</a>.</p>
+
+            </form>
+        </div>
+        <footer>
+            <p>&copy; 2024 Movie Theater. All rights reserved.</p>
+        </footer>
 </body>
 
 </html>
