--- a/pages/movies.html
+++ b/pages/movies.html
@@ -1,29 +1,12 @@
 <?php
 // session_start();
-// include '../includes/db.php';
+// include 'includes/db.php';
+
 // $connection = connectDatabase();
 
-// if ($_SERVER["REQUEST_METHOD"] == "POST") {
-//     $username = $_POST['username'];
-//     $password = $_POST['password'];
-
-//     // WARNING: This is vulnerable to SQL injection!
-//     $query = "SELECT * FROM users WHERE username = '$username'";
-//     $result = $connection->query($query);
-
-//     if ($result->num_rows > 0) {
-//         $row = $result->fetch_assoc();
-//         if (password_verify($password, $row['password'])) {
-//             $_SESSION['username'] = $username;
-//             $_SESSION['role'] = $row['role'];
-//             header('Location: dashboard.php');
-//             exit();
-//         } else {
-//             echo "Invalid password.";
-//         }
-//     } else {
-//         echo "No user found.";
-//     }
+// if (!isset($_SESSION['role']) || $_SESSION['role'] !== 'admin') {
+//     header('Location: login.html');
+//     exit();
 // }
 
 ?>
@@ -33,10 +16,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Login</title>
+    <title>Document</title>
     <style>
-        /* Styles for form consistency */
         html,
         body {
             margin: 0;
@@ -136,90 +117,42 @@
 
         }
 
-        .visible {
-            position: absolute;
-            z-index: 2;
-            padding: 10px;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+        .bottom {
+            margin-left: 10%;
+            margin-right: 10%;
+            margin-top: 30vh;
         }
 
-        .top-bar {
-            display: flex;
-            justify-content: space-between;
-            color: white;
-            padding-top: 4em;
-        }
-
-        .logo-name {
-            font-family: "Josefin Sans", sans-serif;
-            font-size: 2.5em;
-            padding-left: 10%;
-        }
-
-        .pages-names {
-            display: flex;
-            gap: 2em;
-            padding-right: 10%;
-            align-items: center;
-        }
-
-        .form-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 80vh;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: #4d4ae842;
-            padding: 2rem;
-            border-radius: 8px;
-            width: 30vw;
-        }
-
-        input[type="text"],
-        input[type="password"] {
-            width: 90%;
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-        }
-
-        .button-20 {
-            margin-top: 20px;
-        }
-
-        .form-title {
-            margin-bottom: 1rem;
-            font-size: 2rem;
-        }
-
-        .error-message {
-            color: #FF4C4C;
-            background-color: rgba(255, 76, 76, 0.1);
-            border: 1px solid #FF4C4C;
-            padding: 10px;
-            border-radius: 5px;
-            margin-bottom: 15px;
+        .title-text {
+            margin-bottom: 5%;
+            font-size: 40pt;
+            text-transform: uppercase;
+            margin-top: 5%;
             text-align: center;
         }
 
-        p {
-            text-align: center;
-            margin-top: 15px;
+        .movies-grid {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin-bottom: 5%;
         }
 
-        p a {
-            color: black;
-            text-decoration: underline;
+        .elements {
+
+            padding: 20px;
+            /* Padding for items */
+            text-align: center;
+            /* Center text */
+            flex: 1 1 calc(20% - 10px);
+            /* 4 items per row */
+
+        }
+
+        .elements>.text {
+
+            font-family: "Quicksand", sans-serif;
+            font-size: 20pt;
         }
 
         .button-20 {
@@ -246,7 +179,6 @@
             -webkit-user-select: none;
             touch-action: manipulation;
             vertical-align: middle;
-            margin: 5%;
         }
 
         .button-20:focus:not(:focus-visible),
@@ -296,34 +228,35 @@
 </head>
 
 <body>
-    <div class="top">
-        <div class="wrapper">
-            <img class="image-hero" src="../assets/image-hero.jpg"
-                alt="Description of the hero image">
-            <div class="hero-section">
-            </div>
-            <div class="visible">
-                <div class="top-bar">
-                    <div class="logo-name">
-                        loopstudios
-                    </div>
-                    <div class="pages-names">
-                        <a href="home.php">
-                            <span>
-                                Home
-                            </span>
-                        </a>
-                        <a href="movies.php">
-                            <span>
-                                Movies
-                            </span>
-                        </a>
-                        <a href="contacts.php">
-                            <span>
-                                Contacts
-                            </span>
-                        </a>
-                        <a href="login.php">
+    <main>
+        <div class="top">
+            <div class="wrapper">
+                <img class="image-hero" src="../assets/image-hero.jpg"
+                    alt="Description of the hero image">
+                <div class="hero-section">
+                </div>
+                <div class="visible">
+                    <div class="top-bar">
+                        <div class="logo-name">
+                            loopstudios
+                        </div>
+                        <div class="pages-names">
+                            <a href="home.html">
+                                <span>
+                                    Home
+                                </span>
+                            </a>
+                            <a href="movies.html">
+                                <span>
+                                    Movies
+                                </span>
+                            </a>
+                            <a href="contacts.ml">
+                                <span>
+                                    Contacts
+                                </span>
+                            </a>
+                            <a href="login.html">
                             <span>
                                 Sign in
                             </span>
@@ -332,39 +265,75 @@
                         <?php if (isset($_SESSION['role']) && $_SESSION['role'] === 'admin'): ?>
                             <span><a href="admin_dashboard.php">Admin</a></span>
                         <?php endif; ?>
+                        </div>
                     </div>
-                </div>
 
-                <div class="hero-text">
+                    <div class="hero-text">
 
-                    Reserve Your Seat for the Latest Movies!
+                        Reserve Your Seat for the Latest Movies!
 
+                    </div>
                 </div>
             </div>
+
         </div>
 
+        <div class="title-text">Our Movies</div>
+        <div class="movies-grid">
+            <div class="elements">
+                <img src="../assets/image-deep-earth.jpg" alt="Deep earth">
+                <div class="text">Deep earth</div>
+                <p>Short description of the movie.</p>
+                <button class="button-20" role="button">Book now</button>
+            </div>
+            <div class="elements">
+                <img src="../assets/image-night-arcade.jpg" alt="Night arcade">
+                <div class="text">Night arcade</div>
+                <p>Short description of the movie.</p>
+                <button class="button-20" role="button">Book now</button>
+            </div>
+            <div class="elements">
+                <img src="../assets/image-soccer-team.jpg" alt="Soccer team VR">
+                <div class="text">Soccer team VR</div>
+                <p>Short description of the movie.</p>
+                <button class="button-20" role="button">Book now</button>
+            </div>
+            <div class="elements">
+                <img src="../assets/image-grid.jpg" alt="The grid">
+                <div class="text">The grid</div>
+                <p>Short description of the movie.</p>
+                <button class="button-20" role="button">Book now</button>
+            </div>
+            <div class="elements">
+                <img src="../assets/image-from-above.jpg" alt="From up above VR">
+                <div class="text">From up above VR</div>
+                <p>Short description of the movie.</p>
+                <button class="button-20" role="button">Book now</button>
+            </div>
+            <div class="elements">
+                <img src="../assets/image-pocket-borealis.jpg" alt="Pocket borealis">
+                <div class="text">Pocket borealis</div>
+                <p>Short description of the movie.</p>
+                <button class="button-20" role="button">Book now</button>
+            </div>
+            <div class="elements">
+                <img src="../assets/image-curiosity.jpg" alt="The curiosity">
+                <div class="text">The curiosity</div>
+                <p>Short description of the movie.</p>
+                <button class="button-20" role="button">Book now</button>
+            </div>
+            <div class="elements">
+                <img src="../assets/image-fisheye.jpg" alt="Make it fisheye">
+                <div class="text">Make it fisheye</div>
+                <p>Short description of the movie.</p>
+                <button class="button-20" role="button">Book now</button>
+            </div>
 
-        <div class="form-container">
-            <form action="login_handler.php" method="POST">
-                <div class="form-title"><b>Login</b></div>
-                <input type="text" name="username" placeholder="Username" required>
-                <input type="password" name="password" placeholder="Password" required>
-                <button class="button-20" type="submit">Login</button>
-                <!-- Error message section -->
-                <?php if (isset($errorMessage)): ?>
-                    <div class="error-message">
-                        <?php echo $errorMessage; ?>
-                    </div>
-                <?php endif; ?>
-
-                <!-- Link to sign up page if user doesn't have an account -->
-                <p>Don't have an account? <a href="signup.php">Sign up</a>.</p>
-
-            </form>
-        </div>
-        <footer>
-            <p>&copy; 2024 Movie Theater. All rights reserved.</p>
-        </footer>
+    </main>
+    <footer>
+        <center> © 2024 Loopstudios. All rights reserved.
+        </center>
+    </footer>
 </body>
 
 </html>
