--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -255,7 +255,7 @@
                         loopstudios
                     </div>
                     <div class="pages-names">
-                        <a href="home.html">
+                        <a href="index.html">
                             <span>
                                 Home
                             </span>
