--- a/pages/index.html
+++ b/pages/index.html
@@ -284,7 +284,7 @@
                         loopstudios
                     </div>
                     <div class="pages-names">
-                        <a href="home.html">
+                        <a href="index.html">
                             <span>
                                 Home
                             </span>
@@ -294,7 +294,7 @@
                                 Movies
                             </span>
                         </a>
-                        <a href="contacts.ml">
+                        <a href="contacts.html">
                             <span>
                                 Contacts
                             </span>
