--- a/pages/signup.html
+++ b/pages/signup.html
@@ -277,7 +277,7 @@
                         loopstudios
                     </div>
                     <div class="pages-names">
-                        <a href="home.html">
+                        <a href="index.html">
                             <span>
                                 Home
                             </span>
@@ -287,7 +287,7 @@
                                 Movies
                             </span>
                         </a>
-                        <a href="contacts.ml">
+                        <a href="contacts.html">
                             <span>
                                 Contacts
                             </span>
