--- a/pages/login.html
+++ b/pages/login.html
@@ -308,7 +308,7 @@
                         loopstudios
                     </div>
                     <div class="pages-names">
-                        <a href="home.html">
+                        <a href="index.html">
                             <span>
                                 Home
                             </span>
@@ -318,7 +318,7 @@
                                 Movies
                             </span>
                         </a>
-                        <a href="contacts.ml">
+                        <a href="contacts.html">
                             <span>
                                 Contacts
                             </span>
