--- a/pages/movies.html
+++ b/pages/movies.html
@@ -241,7 +241,7 @@
                             loopstudios
                         </div>
                         <div class="pages-names">
-                            <a href="home.html">
+                            <a href="index.html">
                                 <span>
                                     Home
                                 </span>
@@ -251,7 +251,7 @@
                                     Movies
                                 </span>
                             </a>
-                            <a href="contacts.ml">
+                            <a href="contacts.html">
                                 <span>
                                     Contacts
                                 </span>
