changed paths of images

--- a/login.html
+++ b/login.html
@@ -298,7 +298,7 @@
 <body>
     <div class="top">
         <div class="wrapper">
-            <img class="image-hero" src="../assets/image-hero.jpg"
+            <img class="image-hero" src="/assets/image-hero.jpg"
                 alt="Description of the hero image">
             <div class="hero-section">
             </div>
