changed path of images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href=".//assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -274,7 +274,7 @@
     ?>
     <div class="top">
         <div class="wrapper">
-            <img class="image-hero" src="/assets/image-hero.jpg"
+            <img class="image-hero" src="assets/image-hero.jpg"
                 alt="Description of the hero image">
             <div class="hero-section">
             </div>
@@ -323,7 +323,7 @@
 
     <div class="middle">
         <div class="middle-wrapper">
-            <img class="mid-img" src="/assets/image-interactive.jpg" alt="">
+            <img class="mid-img" src="assets/image-interactive.jpg" alt="">
             <div class="mid-text">
                 <div class="header">The leader in interactive VR</div>
 
