--- a/movies.html
+++ b/movies.html
@@ -231,7 +231,7 @@
     <main>
         <div class="top">
             <div class="wrapper">
-                <img class="image-hero" src="/assets/image-hero.jpg"
+                <img class="image-hero" src="assets/image-hero.jpg"
                     alt="Description of the hero image">
                 <div class="hero-section">
                 </div>
@@ -281,49 +281,49 @@
         <div class="title-text">Our Movies</div>
         <div class="movies-grid">
             <div class="elements">
-                <img src="/assets/image-deep-earth.jpg" alt="Deep earth">
+                <img src="assets/image-deep-earth.jpg" alt="Deep earth">
                 <div class="text">Deep earth</div>
                 <p>Short description of the movie.</p>
                 <button class="button-20" role="button">Book now</button>
             </div>
             <div class="elements">
-                <img src="/assets/image-night-arcade.jpg" alt="Night arcade">
+                <img src="assets/image-night-arcade.jpg" alt="Night arcade">
                 <div class="text">Night arcade</div>
                 <p>Short description of the movie.</p>
                 <button class="button-20" role="button">Book now</button>
             </div>
             <div class="elements">
-                <img src="/assets/image-soccer-team.jpg" alt="Soccer team VR">
+                <img src="assets/image-soccer-team.jpg" alt="Soccer team VR">
                 <div class="text">Soccer team VR</div>
                 <p>Short description of the movie.</p>
                 <button class="button-20" role="button">Book now</button>
             </div>
             <div class="elements">
-                <img src="/assets/image-grid.jpg" alt="The grid">
+                <img src="assets/image-grid.jpg" alt="The grid">
                 <div class="text">The grid</div>
                 <p>Short description of the movie.</p>
                 <button class="button-20" role="button">Book now</button>
             </div>
             <div class="elements">
-                <img src="/assets/image-from-above.jpg" alt="From up above VR">
+                <img src="assets/image-from-above.jpg" alt="From up above VR">
                 <div class="text">From up above VR</div>
                 <p>Short description of the movie.</p>
                 <button class="button-20" role="button">Book now</button>
             </div>
             <div class="elements">
-                <img src="/assets/image-pocket-borealis.jpg" alt="Pocket borealis">
+                <img src="assets/image-pocket-borealis.jpg" alt="Pocket borealis">
                 <div class="text">Pocket borealis</div>
                 <p>Short description of the movie.</p>
                 <button class="button-20" role="button">Book now</button>
             </div>
             <div class="elements">
-                <img src="/assets/image-curiosity.jpg" alt="The curiosity">
+                <img src="assets/image-curiosity.jpg" alt="The curiosity">
                 <div class="text">The curiosity</div>
                 <p>Short description of the movie.</p>
                 <button class="button-20" role="button">Book now</button>
             </div>
             <div class="elements">
-                <img src="/assets/image-fisheye.jpg" alt="Make it fisheye">
+                <img src="assets/image-fisheye.jpg" alt="Make it fisheye">
                 <div class="text">Make it fisheye</div>
                 <p>Short description of the movie.</p>
                 <button class="button-20" role="button">Book now</button>
