--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             content: " ";
             position: absolute;
             z-index: 1;
-            opacity: 40%;
+            background-color: black;
+            opacity: 50%;
             top: 0;
             left: 0;
             width: 100%;
@@ -138,6 +139,7 @@
             border: 3px solid white;
             width: 30vw;
 
+
         }
 
         .middle {
@@ -159,7 +161,10 @@
             /* Make the image take up to 100% of its container */
             height: auto;
             /* Maintain the aspect ratio */
-            border-radius:5%;
+            border-top-left-radius: 50px;
+border-top-right-radius: 50px;
+border-bottom-left-radius: 50px;
+border-bottom-right-radius: 50px;
         }
 
         .mid-text {
@@ -173,7 +178,10 @@
             text-wrap: wrap;
             height: auto;
             color:black;
-            border-radius:5%;
+            border-top-left-radius: 50px;
+border-top-right-radius: 50px;
+border-bottom-left-radius: 50px;
+border-bottom-right-radius: 50px;
         }
 
         .header {
