--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<?php
+<!-- <?php
 // session_start();
 // include '../includes/db.php';
 // $connection = connectDatabase();
@@ -26,7 +26,7 @@
 //     }
 // }
 
-?>
+?> -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -34,14 +34,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
+
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <title>Frontend Mentor | Loopstudios landing page</title>
+
     <title>Login</title>
     <style>
-        /* Styles for form consistency */
-        html,
+         html,
         body {
             margin: 0;
             padding: 0;
             overflow-x: hidden;
+            background-color: black;
+            color:white;
         }
 
         a {
@@ -71,6 +88,11 @@
             z-index: 0;
             object-fit: cover;
             display: block;
+            mask-image: linear-gradient(
+    to bottom, 
+    rgba(0, 0, 0, 1) 60%,  /* Fully visible at 60% */
+    rgba(0, 0, 0, 0) 100%  /* Fully transparent at the bottom */
+  );
         }
 
         .hero-section {
@@ -134,36 +156,7 @@
             border: 3px solid white;
             width: 30vw;
 
-        }
 
-        .visible {
-            position: absolute;
-            z-index: 2;
-            padding: 10px;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-
-        .top-bar {
-            display: flex;
-            justify-content: space-between;
-            color: white;
-            padding-top: 4em;
-        }
-
-        .logo-name {
-            font-family: "Josefin Sans", sans-serif;
-            font-size: 2.5em;
-            padding-left: 10%;
-        }
-
-        .pages-names {
-            display: flex;
-            gap: 2em;
-            padding-right: 10%;
-            align-items: center;
         }
 
         .form-container {
@@ -178,7 +171,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: #4d4ae842;
+             background-color:#4d4ae842;/* #B652C8; */
             padding: 2rem;
             border-radius: 8px;
             width: 30vw;
@@ -218,7 +211,6 @@
         }
 
         p a {
-            color: black;
             text-decoration: underline;
         }
 
@@ -283,7 +275,7 @@
             pointer-events: none;
         }
 
-        footer {
+         footer {
             height: 100px;
             background-color: black;
             margin-top: 50px;
@@ -291,6 +283,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            border-top: solid 2px white;
         }
     </style>
 </head>
@@ -358,7 +351,7 @@
                 <?php endif; ?>
 
                 <!-- Link to sign up page if user doesn't have an account -->
-                <p>Don't have an account? <a href="signup.php">Sign up</a>.</p>
+                <p>Don't have an account? <a href="signup.html">Sign up</a>.</p>
 
             </form>
         </div>
