--- a/movies.html
+++ b/movies.html
@@ -30,7 +30,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Frontend Mentor | Loopstudios landing page</title>
+    <title>Frontend Mentor | cinestream landing page</title>
 
     <title>Document</title>
     <style>
@@ -82,7 +82,7 @@
             position: absolute;
             z-index: 1;
             background-color: black;
-            opacity: 50%;
+            opacity: 60%;
             top: 0;
             left: 0;
             width: 100%;
@@ -264,7 +264,7 @@
                 <div class="visible">
                     <div class="top-bar">
                         <div class="logo-name">
-                            loopstudios
+                            cinestream
                         </div>
                         <div class="pages-names">
                             <a href="index.html">
@@ -357,7 +357,7 @@
 
     </main>
     <footer>
-        <center> © 2024 Loopstudios. All rights reserved.
+        <center> © 2024 cinestream. All rights reserved.
         </center>
     </footer>
 </body>
