--- a/admin.html
+++ b/admin.html
@@ -35,7 +35,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Frontend Mentor | Loopstudios landing page</title>
+    <title>Frontend Mentor | cinestream landing page</title>
 
     <title>Admin Dashboard</title>
 </head>
