changed default pictures and added scroll effect to index.html

--- a/movies.html
+++ b/movies.html
@@ -257,7 +257,7 @@
     <main>
         <div class="top">
             <div class="wrapper">
-                <img class="image-hero" src="assets/image-hero.jpg"
+                <img class="image-hero" src="assets/image-hero-movies.jpg"
                     alt="Description of the hero image">
                 <div class="hero-section">
                 </div>
@@ -292,12 +292,6 @@
                             <span><a href="admin_dashboard.php">Admin</a></span>
                         <?php endif; ?>
                         </div>
-                    </div>
-
-                    <div class="hero-text">
-
-                        Reserve Your Seat for the Latest Movies!
-
                     </div>
                 </div>
             </div>
