--- a/contacts.html
+++ b/contacts.html
@@ -263,7 +263,7 @@
 <body>
     <div class="top">
         <div class="wrapper">
-            <img class="image-hero" src="assets/image-hero.jpg"
+            <img class="image-hero" src="assets/image-hero-contacts.jpg"
                 alt="Description of the hero image">
             <div class="hero-section">
             </div>
